--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "swr": "^2.2.2",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "sass": "^1.66.1"
   }
 }
